# python-app

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy_to_container_apps.yaml  image_build.yaml  terraform.yaml
app/: main.py
app/database/: cosmos-db.py  database.py
app/routers/: auth.py  router.py
terraform/environments/dev/: id_rsa.pub  main.tf  provider.tf  terraform.tfstate  terraform.tfvars  variables.tf
terraform/environments/dev/.terraform/: terraform.tfstate
terraform/environments/dev/.terraform/modules/: modules.json
terraform/modules/keyVault/: main.tf  output.tf  variables.tf
terraform/modules/resource_group/: main.tf  variables.tf
terraform/modules/storage_account/: main.tf  output.tf  variables.tf
terraform/modules/virtual machines/: main.tf  output.tf  variables.tf
terraform/modules/vnet/: main.tf  output.tf  variables.tf
